2016-12-27  The-Michael-R <The-Michael-R@users.noreply.github.com>
	* General:
	Added more comments for a later doxygen usage.
	Still needs some cleanup to be done.

	* nuimo_communication.c (push_buffer):
	Added: Now the FLY_UPDWN uses also an 'inteligent' buffer strategy.

	* nuimod.c (get_commands):
	Removed: Missed one development/debug printf before releasing the code.


2016-12-19  The-Michael-R <The-Michael-R@users.noreply.github.com>
	* nuimod.c:
	Changed: Bigger changes to improve responsibility by introducing a buffer

	* nuimo_communication.c:
	New: Seperated the Nuimo communication from the main code.
	New: Imlpemented some kind of inteligent buffer. Currently only for Rotation: Accumulation of pending rotation-events


2016-11-20 The-Michael-R <The-Michael-R@users.noreply.github.com>
	* nuimod.c (my_cb_function):
	Changed: Adapted to the nuimo_set_led changes in nuimolibrary.

	* Makefile:
	Changed: Optimized the makefile.