@@ -5,3 +5,4 @@
 example
 docs/
 .~*
+nuimod
